# xorq-mcp

./: .gitignore  CLAUDE.md  FINE_TUNING_PLAN.md  KNOWN_BUGS.md  PLAN.md  pyproject.toml  xorq_mcp_tool.py
.github/workflows/: ci.yml
docs/plans/: migrate-catalog-0.3.11.md
examples/: README-parts-to-keep.md  bank_marketing.py  catalog-notes.md  citibike_2020_01.py  citibike_2020_02.py  citibike_2020_03.py  citibike_2020_04.py  citibike_2020_05.py  citibike_2020_06.py  citibike_2020_07.py  citibike_2020_08.py  citibike_2020_09.py  citibike_2020_10.py  citibike_2020_11.py  citibike_2020_12.py  citibike_2020_full.py  citibike_2022_05.py  citibike_2022_05_station_popularity.py  citibike_month.py  citibike_stations.py  complex_cached_expr.py  deferred_fit_predict_example.py  deferred_fit_transform_example.py  deferred_fit_transform_predict_example.py  deferred_read_csv.py  demonstrate_ir_two_categorical.py  duckdb_flight_example.py  expr_scalar_udf.py  flight_dummy_exchanger.py  flight_exchange_example.py  flight_serve_model.py  flight_udtf_example.py  flight_udtf_llm_example.py  gcstorage_example.py  interactive_caching.ipynb  into_backend_example.py  iris_example.py  local_cache.py  mcp_flight_server.py  model_comparison_build.py  (+25 more)
examples/builds/248c45b6335b/: expr.yaml  metadata.json
examples/hackernews-items/: item_id=43181839  item_id=43181840  item_id=43181841  item_id=43181842  item_id=43181843  item_id=43181844  item_id=43181845  item_id=43181846  item_id=43181847  item_id=43181848  item_id=43181849  item_id=43181850  item_id=43181851  item_id=43181852  item_id=43181853  item_id=43181854  item_id=43181855  item_id=43181856  item_id=43181857  item_id=43181858  item_id=43181859  item_id=43181860  item_id=43181861  item_id=43181862  item_id=43181863  item_id=43181864  item_id=43181865  item_id=43181866  item_id=43181867  item_id=43181868  item_id=43181869  item_id=43181870  item_id=43181871  item_id=43181872  item_id=43181873  item_id=43181874  item_id=43181875  item_id=43181876  item_id=43181877  item_id=43181878  (+960 more)
examples/libs/: hackernews_lib.py  mcp_lib.py  openai_lib.py  postgres_helpers.py
examples/warehouse/: pyiceberg_catalog.db
tests/: conftest.py  test_buckaroo_reliability.py  test_playwright.py  test_tools.py  test_web.py
xorq_web/: __main__.py  app.py  catalog_utils.py  handlers.py  metadata.py  session_store.py
xorq_web/static/: xorq.css
xorq_web/templates/: base.html  catalog_index.html  error.html  expression_detail.html  runs.html
(+32 files in other folders)
